# monorepo

./: .dccache  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gorc  .snyk  .yamllint  CHANGES.md  CMakeLists.txt  CTestTestfile.cmake  LICENSE.txt  Makefile  README.md  SECURITY.md  cmake_install.cmake  go.mod  go.sum  monorepo-template.yaml  monorepo.yaml  monorepo.yaml.md  package-lock.json  package.json  requirements.txt  staticcheck.conf  version.cmake
.github/: dependabot.yml
.github/workflows/: go-tests.yaml  lint-main-branch.yaml  linter.yaml  main-branch.yaml  release.yaml  security-on-main.branch.yaml  security.yaml  test-branch.yaml  v.0.0.0.yaml  workflow-00-setup.yaml  workflow-00.yaml  workflow-01-lint.yaml  workflow-01-lint.yaml.disabled  workflow-02-test.yaml  workflow-02-test.yaml.disabled  workflow-03-build.yaml
.obsidian/: community-plugins.json  workspace.json
CMake/: add_cpp_projects.cmake  add_go_projects.cmake  colors.cmake  cpp_add_project.cmake  cpp_add_projects.cmake  cpp_create_documentation_header.cmake  cpp_project_artifact.cmake  cpp_project_tests.cmake  create_build_dir.cmake  create_documentation_footer.cmake  create_documentation_header.cmake  create_documentation_line.cmake  include_if_exists.cmake  logger.cmake  require.cmake
Makefile.d/: build.mk  check-os.mk  check.os.mk  check.package-managers.mk  clean.mk  cmd.color.mk  disable.build.projects.mk  disable.tests.mk  enable.build.projects.mk  enable.tests.mk  git.current.branch.mk  git.sync.mk  hooks.mk  latest.mk  lint.go.mk  lint.mk  lint.yaml.mk  list.build.projects.mk  parameters.build_dir.mk  parameters.build_projects.mk  parameters.go.mk  parameters.goarch_list.mk  parameters.goos_list.mk  parameters.mk  parameters.opsys.mk  require.github.action.mk  security.mk  test.mk  version.mk
Makefile.d/_config/: 000.executable_extension.mk  000.go.vet.flags.mk  000.goarch_list.mk  000.goos_list.mk  000.gotmpdir.mk  000.opsys.mk  000.repo_root.mk  010.go.mk  100.build_projects.mk  100.current_repo_version.mk  100.has_apt.package-manager.mk  100.has_brew.package-manager.mk  100.has_choco.package-manager.mk  100.has_dpkg.package-manager.mk  100.has_rpm.package-manager.mk  100.has_winget.package-manager.mk  100.has_yum.package-manager.mk  200.package-manager.mk  bin_dir.mk  build_projects.mk  cpuarch.mk  current_repo_version.mk  executable_extension.mk  git.current.branch.mk  go.mk  goarch_list.mk  goos_list.mk  gotmpdir.mk  has_apt.package-manager.mk  has_brew.package-manager.mk  has_choco.package-manager.mk  has_dpkg.package-manager.mk  has_rpm.package-manager.mk  has_winget.package-manager.mk  has_yum.package-manager.mk  package-managers.mk  package_manager.mk  packer.root.mk  packer_bin.mk  packer_version.mk  (+5 more)
Makefile.d/check/: check.os.mk  check.package-managers.mk  package-manager.mk  package-managers.list.mk  package-managers.mk  repo_root.mk
Makefile.d/lint/: lint.go.mk  lint.go.setup.mk  lint.install.shellcheck.mk  lint.install.staticcheck.mk  lint.mk  lint.shell.mk  lint.staticcheck.mk  lint.vet.mk  lint.yaml.mk  shellcheck.mk
Makefile.d/packer/: build.packer.darwin.mk  build.packer.linux.centos.mk  build.packer.linux.mk  (+10 more)
ansible/: README.md
cmake/: main.cmake
cmd/: staticcheck.conf
containers/: Makefile  Manifest.yml
cpp/: CMakeLists.txt  README.md  cmake_install.cmake  monorepo.yaml
docker/: Makefile  README.md
docs/: CRSCE_Specification.docx  README.md  Roadmap-2024.md
getting-started/: README.md  debian-linux.sh  ubuntu-linux.sh
go/: CMakeLists.txt  cmake_install.cmake  monorepo.yaml
jokes/: 2023-12-15-1222.txt  2023-12-15-1844.txt  2023-12-23-1734.txt  2023-12-4-1619.txt  2023-12-4-1621.txt  2023-12-4-1623.txt  2023-12-4-1631.txt  2023-12-4-1634.txt  2023-12-4-1635.txt  2023-12-4-1636.txt  2023-12-4-1638.txt  2023-12-4-1650.txt  2023-12-4-1651.txt  2023-12-4-1653.txt  janis-joplin-parody.txt
monorepo.d/: build_hosts.yaml  container_runtimes.yaml  hypervisors.yaml  language.yaml  platforms.yaml
packer/: README.md
projects/: staticcheck.conf
systems/: README.md
vagrant/: README.md
(+7278 files in other folders)
